--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/config/application.properties
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/config/application.properties
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.default_schema: public
 spring.jpa.properties.org.hibernate.envers.audit_table_suffix: _audited
 spring.jpa.properties.org.hibernate.envers.revision_field_name: revision
 spring.jpa.properties.org.hibernate.envers.revision_type_field_name: revision_type
-spring.jpa.properties.org.hibernate.envers.default_schema: auditing
+spring.jpa.properties.org.hibernate.envers.default_schema: auditoria
 
 #FLYWAY
 flyway.enabled: @mvn.flyway.enabled@
