--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/.settings/org.eclipse.core.resources.prefs
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html=UTF-8
 encoding//src/main/resources/i18n=UTF-8
 encoding//src/main/resources/i18n/exceptions_en.properties=UTF-8
 encoding//src/main/resources/i18n/exceptions_pt.properties=UTF-8
