--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/.project
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>java-architecture</name>
+	<name>graca</name>
 	<comment></comment>
 	<projects>
 	</projects>
