--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
@@ -239,9 +239,10 @@
 			<plugin>
         		<groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-surefire-plugin</artifactId>
-        		<configuration>
+      			<configuration>
           			<excludes>
-            			<exclude>**/*IntegrationTests.java</exclude>
+            			<exclude>**/*MetaFileRepositoryIntegrationTests.java</exclude>
+            			<exclude>**/*AccountMailRepositoryIntegrationTests.java</exclude>
           			</excludes>
         		</configuration>
       		</plugin>
@@ -360,6 +361,11 @@
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>${sonar.plugin.version}</version>
 			</plugin>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<version>2.19.1</version>
+      		</plugin>
 		</plugins>
 	</reporting>
 
