--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
@@ -582,6 +582,13 @@
 		    <version>0.0.5</version>
 		</dependency>
 		
+		  
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>angular-material-expansion-panel</artifactId>
+		    <version>0.6.1</version>
+		</dependency>
+		
 	</dependencies>
 	
 </project>
