--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/pom.xml
@@ -57,7 +57,7 @@
         	</activation>
 			<properties>
 				<!-- Database -->
-				<mvn.jdbc.jdbcUrl>jdbc:postgresql://127.0.0.1:5432/graca</mvn.jdbc.jdbcUrl>
+				<mvn.jdbc.jdbcUrl>jdbc:postgresql://127.0.0.1:5432/gracae</mvn.jdbc.jdbcUrl>
 				<mvn.jdbc.username>postgres</mvn.jdbc.username>
 				<mvn.jdbc.password>postgres</mvn.jdbc.password>
 
@@ -67,7 +67,7 @@
 				<mvn.test.jdbc.password>postgres</mvn.test.jdbc.password>
 
 				<!-- Hibernate -->
-				<mvn.hibernate.hbm2ddl>update</mvn.hibernate.hbm2ddl>
+				<mvn.hibernate.hbm2ddl>validate</mvn.hibernate.hbm2ddl>
 				<mvn.hibernate.showSql>true</mvn.hibernate.showSql>
 				
 				<!-- JCR -->
@@ -86,7 +86,7 @@
 				
 				<!-- Others -->
 				<mvn.cache.enabled>false</mvn.cache.enabled>
-				<mvn.flyway.enabled>false</mvn.flyway.enabled>
+				<mvn.flyway.enabled>true</mvn.flyway.enabled>
 			</properties>
 		</profile>
 		
